@@ -218,7 +218,8 @@ sub html_safe_filename {
     my ($fname) = @_;
     # replace / and \ with html safe '-', we also do a bunch of other
     # chars, especially ':' for Windows, to make the namer simpler and safer
-    $fname =~ s{  [-/\\:\*\?"'<>|]+ }{-}xg;
+    # also remove dots to keep VMS happy
+    $fname =~ s{  [-/\\:\*\?"'<>|.]+ }{-}xg;
     # remove any leading or trailing '-' chars
     $fname =~ s{^-}{};
     $fname =~ s{-$}{};
